add-bookings 1.1